--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
-spring.datasource.url=jdbc:h2:mem:moviedb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.url=jdbc:postgresql://localhost:5432/Movie app
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
