added the database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
-server.port=8080
+spring.application.name=movie-app-backend
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Movie app
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/movie app
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=neo000W+
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA / Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.h2.console.enabled=true
-
-
-spring.application.name=MovieBackendApplication
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
