--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=movie-app-backend
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Movie app
+spring.datasource.url=jdbc:postgresql://localhost:5433/Movie-app
 spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
